--- a/Lesson 3/index.html
+++ b/Lesson 3/index.html
@@ -1,16 +1,31 @@
 <html>
     <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="./css/cards.css" />
+    <meta charset="utf-8">
     <head>
         <title>T3</title>
     </head>
     <body>
-    <div class="container">
-        <div>1</div>
-        <div class="el-2">2</div>
-        <div class="el-3">3</div>
-        <div>4</div>
-        <div>5</div>
-    </div>
+        <div class="cards horizontal-block">
+            <div class="suit-hearts">7</div>
+            <div class="suit-spades">7</div>
+            <div class="suit-clubs">7</div>
+            <div class="suit-diamonds">7</div>
+            <div class="suit-hearts">T</div>
+            <div class="suit-spades">T</div>
+            <div class="suit-clubs">T</div>
+            <div class="suit-diamonds">T</div>
+        </div>
+        <div class="cards vertical-block">
+            <div class="suit-hearts">4</div>
+            <div class="suit-spades">4</div>
+            <div class="suit-clubs">4</div>
+            <div class="suit-diamonds">4</div>
+            <div class="suit-hearts">T</div>
+            <div class="suit-spades">T</div>
+            <div class="suit-clubs">T</div>
+            <div class="suit-diamonds">T</div>
+        </div>
        
     </body>
 </html>
