--- a/Lesson 4/index.html
+++ b/Lesson 4/index.html
@@ -11,17 +11,17 @@
     <form method="POST">
         <div class="form-group">
             <label for="name">Name</label>
-            <input type="text" id="name" placeholder="Enter your name" required>                
+            <input type="text" id="name" placeholder="Enter your name" value="sad" required>                
         </div>
 
         <div class="form-group">
             <label for="mail">Email</label>
-            <input type="email" id="mail" placeholder="Enter your email">                
+            <input type="email" id="mail" placeholder="Enter your email" value="">                
         </div>  
 
         <div class="form-group">
             <label for="phone">Phone</label>
-            <input type="tel" id="phone" placeholder="Enter your phone">
+            <input type="tel" id="phone" placeholder="Enter your phone " value="">
         </div>
 
         <div class="form-group">
@@ -34,7 +34,21 @@
             </select>
         </div>
 
-        <div class="form-group">
+        <div class="form-group form-options">
+            <label for="terms-and-conditions">Terms and conditions</label>
+            <input type="checkbox" id="terms-and-conditions" checked>     
+        </div>
+
+        
+
+        <div class="form-group form-options">
+            <label for="send">Send my data to 3-rd party</label>
+            <input type="radio" name="radio1" id="radio1">     
+            <label for="send">Please send my data to 3-rd party</label>            
+            <input type="radio" name="radio1" id="radio2">     
+        </div>
+
+        <div class="form-action">
             <button type="submit">Send</button>
         </div>
 
