--- a/School105/Школа №105.html
+++ b/School105/Школа №105.html
@@ -8,90 +8,92 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Школа №105</title>
 	<link href="./Школа №105_files/main.css" type="text/css" rel="stylesheet">
+	
 </head>
 
 <body>
 	<div class="page">
-		<div class="header">
+		<header>
 			<p>02096, м. Київ, вул. Сімферопольська, 10, тел/факс (044)576-67-70</p>
 			<a href="/">
 				<img src="./Школа №105_files/var2.jpg" alt="Школа 105">
 			</a>
-		</div>
-		<div class="navigation">
-			<a href="/">Головна сторінка</a>
+		</header>
+		<main>
+			<div>
+				<div class="navigation">
+					<a href="/">Головна сторінка</a>
 
-			<a href="/about.html">Інформація про школу</a>
+					<a href="/about.html">Інформація про школу</a>
 
-			<a href="/proud.html">Наші досягнення</a>
+					<a href="/proud.html">Наші досягнення</a>
 
-			<a href="/album.html">Фотогалерея</a>
+					<a href="/album.html">Фотогалерея</a>
 
-			<a href="/Metodichnii_keis/">Методичний кейс</a>
+					<a href="/Metodichnii_keis/">Методичний кейс</a>
 
-			<a href="/Dlya_batkv/">Батькам</a>
+					<a href="/Dlya_batkv/">Батькам</a>
 
-			<a href="/contacts.html">Контактна інформація</a>
+					<a href="/contacts.html">Контактна інформація</a>
 
-			<a href="/Zaproshumo_na_robotu/">Запрошуємо на роботу!</a>
+					<a href="/Zaproshumo_na_robotu/">Запрошуємо на роботу!</a>
 
 
-		</div>
-		<div class="banners">
-			<div class="banner">
-				<p>Миттєвості шкільного життя</p>
-				<a href="/">
-					<img src="./Школа №105_files/rid.php" alt="">
-				</a>
+				</div>
+				<div class="banners">
+					<a href="/" class="banner">
+						<p>Миттєвості шкільного життя</p>
+						<img src="./Школа №105_files/rid.php" alt="">
+					</a>
+					<a href="/" class="banner">
+						<p>Зроблено в школі</p>
+
+						<img src="./Школа №105_files/rid(1).php">
+					</a>
+					<a href="http://adamant.ua/" class="banner">
+						<p>Корисні посилання</p>
+
+						<img src="./Школа №105_files/adamant.jpg">
+					</a>
+				</div>
 			</div>
-			<div class="banner">
-				<p>Зроблено в школі</p>
-				<a href="/">
-					<img src="./Школа №105_files/rid(1).php">
-				</a>
-			</div>
-			<div class="banner">
-				<p>Корисні посилання</p>
-				<a href="http://adamant.ua/">
-					<img src="./Школа №105_files/adamant.jpg">
-				</a>
-			</div>
-		</div>
-		<div class="content">
-			<h2>Інформація про школу</h2>
-			<img alt="" src="./Школа №105_files/Gerb_200.jpg">
-			<h3>З історії</h3>
+			<div class="content">
+				<h2>Інформація про школу</h2>
+				<img alt="" src="./Школа №105_files/Gerb_200.jpg">
+				<h3>З історії</h3>
 
-			<p>
-				<strong>1939</strong> - рік заснування закладу як школи робочої молоді. У роки війни будівлю було зруйновано.
-				<br>
-				<strong>1948</strong> - відбудована школа знову почала роботу.
-				<br>
-				<strong>1968</strong> - добудовано два нових корпуси.
-				<br>
-				<strong>20 грудня 1984</strong> - присвоєно ім’я маршала К. К. Рокоcсовського.
-				<br>
-				<strong>21 грудня 1986</strong> - відкрито музей К. К. Рокоссовського.
-				<br>
-				<strong>2004</strong> - впроваджено профільну освіту (10-11 клас).
-				<br>
-				<strong>2005</strong> - наказом Міністерства освіти і науки України присвоєно звання «Зразковий музей».
-				<br>
-				<strong>1997</strong> - заклад отримав статус середньої загальноосвітньої школи І-ІІІ ступенів з українською мовою навчання.
-				<br>
-				<strong>2010</strong> - заклад отримав статус спеціалізованої загальноосвітньої школи І-ІІІ ступенів з поглибленим вивченням
-				предметів суспільно-гуманітарного циклу.</p>
-			<p style="text-align: justify;">
-				<img alt="" src="./Школа №105_files/PearsonPartner.jpg" style="width: 190px; height: 110px; float: left; margin-left: 3px; margin-right: 3px;">Наш навчальний заклад входить до низки партнерських закладів видавництва Пірсон (Велика Британія). Форми співпраці нашого
-				закладу з Пірсон (семінари для вчителів англійської, творчі майстерні, вікторини, конкурси для учнів, участь у тижнях
-				англійської мови, демонстраційні уроки) сприяють професійному зростанню педколективу та дозволяють нашим учням якнайкраще
-				проявити&nbsp; свої знання та уміння.</p>
-		</div>
-		<div class="footer">
+				<p>
+					<strong>1939</strong> - рік заснування закладу як школи робочої молоді. У роки війни будівлю було зруйновано.
+					<br>
+					<strong>1948</strong> - відбудована школа знову почала роботу.
+					<br>
+					<strong>1968</strong> - добудовано два нових корпуси.
+					<br>
+					<strong>20 грудня 1984</strong> - присвоєно ім’я маршала К. К. Рокоcсовського.
+					<br>
+					<strong>21 грудня 1986</strong> - відкрито музей К. К. Рокоссовського.
+					<br>
+					<strong>2004</strong> - впроваджено профільну освіту (10-11 клас).
+					<br>
+					<strong>2005</strong> - наказом Міністерства освіти і науки України присвоєно звання «Зразковий музей».
+					<br>
+					<strong>1997</strong> - заклад отримав статус середньої загальноосвітньої школи І-ІІІ ступенів з українською мовою навчання.
+					<br>
+					<strong>2010</strong> - заклад отримав статус спеціалізованої загальноосвітньої школи І-ІІІ ступенів з поглибленим вивченням
+					предметів суспільно-гуманітарного циклу.</p>
+				<p style="text-align: justify;">
+					<img alt="" src="./Школа №105_files/PearsonPartner.jpg" style="transform: rotate(-10deg); float: left; margin:10px;">
+					Наш навчальний заклад входить до низки партнерських закладів видавництва Пірсон (Велика Британія). Форми співпраці нашого
+					закладу з Пірсон (семінари для вчителів англійської, творчі майстерні, вікторини, конкурси для учнів, участь у тижнях
+					англійської мови, демонстраційні уроки) сприяють професійному зростанню педколективу та дозволяють нашим учням якнайкраще
+					проявити&nbsp; свої знання та уміння.</p>
+			</div>
+		</main>
+		<footer>
 			<p>Спеціалізована загальноосвітня школа І-ІІІ ступенів №105 з поглибленим вивченням предметів суспільно-гуманітарного циклу,
 				м. Київ</p>
-			<a href="">Розробник сайту - Mykhailo Kravchenko</a>
-		</div>
+			<p><a href="">Розробник сайту - Mykhailo Kravchenko</a></p>
+		</footer>
 	</div>
 </body>
 
