--- a/Lesson 4/index.html
+++ b/Lesson 4/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <link rel="stylesheet" href="./css/main.css">
     <meta charset="UTF-8">
@@ -7,71 +8,173 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Forms</title>
 </head>
+
 <body>
-    <form method="POST">
-        <div class="form-group">
-            <label for="name">Name</label>
-            <input type="text" id="name" placeholder="Enter your name" value="sad" required>                
-        </div>
+    <div class="page">
+        <form method="POST">
+            <div class="form-group">
+                <label for="name">Name</label>
+                <input type="text" id="name" placeholder="Enter your name" value="sad" required>
+            </div>
 
-        <div class="form-group">
-            <label for="mail">Email</label>
-            <input type="email" id="mail" placeholder="Enter your email" value="">                
-        </div>  
+            <div class="form-group">
+                <label for="mail">Email</label>
+                <input type="email" id="mail" placeholder="Enter your email" value="">
+            </div>
 
-        <div class="form-group">
-            <label for="phone">Phone</label>
-            <input type="tel" id="phone" placeholder="Enter your phone " value="">
-        </div>
+            <div class="form-group">
+                <label for="phone">Phone</label>
+                <input type="tel" id="phone" placeholder="Enter your phone " value="">
+            </div>
 
-        <div class="form-group">
-            <label for="sex">Sex</label>
-            <select id="sex">
-                <option value="none" selected>Select</option>
-                <option value="male">Male</option>
-                <option value="female">Female</option>
-                <option value="other">Other</option>
-            </select>
-        </div>
+            <div class="form-group">
+                <label for="sex">Sex</label>
+                <select id="sex">
+                    <option value="none" selected>Select</option>
+                    <option value="male">Male</option>
+                    <option value="female">Female</option>
+                    <option value="other">Other</option>
+                </select>
+            </div>
 
-        <div class="form-group form-options">
-            <label for="terms-and-conditions">Terms and conditions</label>
-            <input type="checkbox" id="terms-and-conditions" checked>     
-        </div>
-
-        
-
-        <div class="form-group form-options">
-            <label for="send">Send my data to 3-rd party</label>
-            <input type="radio" name="radio1" id="radio1">     
-            <label for="send">Please send my data to 3-rd party</label>            
-            <input type="radio" name="radio1" id="radio2">     
-        </div>
-
-        <div class="form-action">
-            <button type="submit">Send</button>
-        </div>
-    </form>
+            <div class="form-group form-options">
+                <label for="terms-and-conditions">Terms and conditions</label>
+                <input type="checkbox" id="terms-and-conditions" checked>
+            </div>
 
 
-    <div>Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text </div>
-    <br />
-    <br />
-    <div>Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text </div>
-    <br />
-    <br />
-    <div>Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text </div>
-    <br />
-    <br />
-    <div>Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text </div>
-    <br />
-    <br />
-    <div>Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text </div>
-    <br />
-    <br />
-    <div>Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text </div>
-    <br />
-    <br />
+
+            <div class="form-group form-options">
+                <label for="send">Send my data to 3-rd party</label>
+                <input type="radio" name="radio1" id="radio1">
+                <label for="send">Please send my data to 3-rd party</label>
+                <input type="radio" name="radio1" id="radio2">
+            </div>
+
+            <div class="form-action">
+                <button type="submit">Send</button>
+            </div>
+        </form>
+    </div>
+
+    <div class="page">
+        <form action="#" method="get">
+            <div class="form-group">
+                <label for="email">Email</label>
+                <input type="email" name="email" id="email" placeholder="email" required>
+            </div>
+
+            <div class="form-group">
+                <label for="phone">Phone</label>
+                <input type="tel" name="phone" id="phone" pattern="/\(?([0-9]{3})\)?([ .-]?)([0-9]{3})\2([0-9]{4})/">
+            </div>
+
+            <div class="form-group">
+                <label for="month">Month</label>
+                <input type="month" name="month" id="month">
+            </div>
+
+            <div class="form-group">
+                <label for="number">Number</label>
+                <input type="number" name="number" id="number">
+            </div>
+
+
+            <div class="form-action">
+                <button type="submit">Send</button>
+            </div>
+        </form>
+    </div>
+
+
+    <div class="page">
+        <form action="#" method="get">
+            <div class="form-group">
+                <input type="file" name="photo" id="file" class="inputfile">
+                <label for="photo">Upload photo</label>
+            </div>
+            <div class="form-group">
+                <label for="description">Description</label>
+                <textarea name="text" id="description" rows="30" cols="5">Hello world</textarea>
+            </div>
+
+            <div class="form-group">
+                <label for="author">Author</label>
+                <input type="text" name="author" id="author" value="">
+            </div>
+
+            <div class="form-action">
+                <button type="submit">Send</button>
+            </div>
+        </form>
+    </div>
+
+    <div class="page">
+        <form action="#">
+            <div class="form-group">
+                <label for="login">Login</label>
+                <input type="text" name="login" placeholder="Login" value="">
+            </div>
+            <div class="form-group">
+                <label for="password">Password</label>
+                <input type="password" name="password" placeholder="Password" value="">
+            </div>
+            <div class="form-action">
+                <button type="submit">Log in</button>
+            </div>
+        </form>
+    </div>
+
+
+
+
+
+
+    <div class="page-text">
+        <p>Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some
+            text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some
+            text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some
+            text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some
+            text Some text Some text Some text Some text Some text Some text </p>
+        <br />
+        <br />
+        <p>Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some
+            text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some
+            text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some
+            text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some
+            text Some text Some text Some text Some text Some text Some text </p>
+        <br />
+        <br />
+        <p>Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some
+            text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some
+            text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some
+            text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some
+            text Some text Some text Some text Some text Some text Some text </p>
+        <br />
+        <br />
+        <p>Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some
+            text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some
+            text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some
+            text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some
+            text Some text Some text Some text Some text Some text Some text </p>
+        <br />
+        <br />
+        <p>Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some
+            text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some
+            text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some
+            text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some
+            text Some text Some text Some text Some text Some text Some text </p>
+        <br />
+        <br />
+        <p>Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some
+            text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some
+            text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some
+            text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some
+            text Some text Some text Some text Some text Some text Some text </p>
+        <br />
+        <br />
+    </div>
     <div class="footer">My footer </div>
 </body>
+
 </html>
